--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix error in treeWalker on Internet Explorer >= 9.
+  [Kevin Bieri]
 
 
 1.0.0 (2016-11-30)
