Move sample phonenumbers to testing section.
Closes https://github.com/4teamwork/ftw.candlestick/issues/7

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+- Move phonenumbers samples to testing section.
+  [Kevin Bieri]
+
 - Fix readme.
   [Kevin Bieri]
 
