--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix plone 5 resource bundle for production mode. [tinagerber]
 
 
 1.1.1 (2019-09-23)
