--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
-- Combuine yarn watch and grunt watch [Nachtalb]
+- Combine yarn watch and grunt watch [Nachtalb]
 
 
 1.1.3 (2019-12-14)
