--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,7 @@ Changelog
 ------------------
 
 - Combine yarn watch and grunt watch [Nachtalb]
+- Fix candlestick being run to early before DOM is ready [Nachtalb]
 
 
 1.1.3 (2019-12-14)
